# chatgpt-desktop

./: CMakeLists.txt  main.cpp  mainwindow.ui  resources.qrc
.github/workflows/: build-release.yml  build-test.yml
resources/: chatgpt.desktop
